Fix horizontal scroll

--- a/landing-pages/uptous/src/css/_base.css
+++ b/landing-pages/uptous/src/css/_base.css
@@ -4,6 +4,10 @@ html {
   font-size: 24px;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 h1,
 h2,
 h3,
